Fixed submessage positioning

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 					break;
 				case 25:
 					tag = 'Five x Five'
+					break;
 				case 50:
 					tag = 'Get Rich or Die Trying'
 					break;
@@ -220,7 +221,7 @@
 
 		var submessage = {
 			x: 20,
-			y: 354,
+			y: 364,
 			font: '21px Oswald',
 			opacity: 1,
 			txt: 'Tap Anywhere!'
