--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			background-color: white;
 			padding: 0;
 			box-shadow: 0px 3px 1px 2px rgba(0,0,0,0.2);
+			border-radius: 8px;
 		}
 		#nameID {
 			position: absolute;
