Disable scrolling 'bug' on Windows

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			background-color: #287eff;
 			font-family: 'Oswald', sans-serif;
 			color: white;
+			overflow: hidden;
 		}
 		canvas {
 			margin: auto;
